Added positional query operator logic in query parser

--- a/src/Lifti.Core/ExceptionMessages.resx
+++ b/src/Lifti.Core/ExceptionMessages.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ExpectedTextToken" xml:space="preserve">
+    <value>Expected a text token - got {0}</value>
+  </data>
   <data name="ExpectedToken" xml:space="preserve">
     <value>Token expected: {0}</value>
   </data>
