--- a/test/Lifti.Tests/TestResources.resx
+++ b/test/Lifti.Tests/TestResources.resx
@@ -124,4 +124,7 @@
   <data name="v3Index" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>v3.dat;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="v4Index" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>v4.dat;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
