--- a/src/Lifti.Core/ExceptionMessages.resx
+++ b/src/Lifti.Core/ExceptionMessages.resx
@@ -252,6 +252,9 @@
   <data name="UnsupportedIndexSupportLevel" xml:space="preserve">
     <value>Unsupported index support level {0}</value>
   </data>
+  <data name="UnsupportedQueryJoiningOperator" xml:space="preserve">
+    <value>Unsupported query joining operator: {0}</value>
+  </data>
   <data name="ValueMustNotBeLessThanZero" xml:space="preserve">
     <value>Value must not be less than zero</value>
   </data>
