--- a/src/Lifti.Core/ExceptionMessages.resx
+++ b/src/Lifti.Core/ExceptionMessages.resx
@@ -126,6 +126,9 @@
   <data name="AttemptToReadFieldUnknownToDynamicFieldReader" xml:space="preserve">
     <value>An attempt was made to read a dynamic field ("{0}") from a provider that did not produce it.</value>
   </data>
+  <data name="BadlyFormattedVariableLengthValueEncountered" xml:space="preserve">
+    <value>Badly formatted variable length value encountered</value>
+  </data>
   <data name="BatchChangeAlreadyStarted" xml:space="preserve">
     <value>Cannot start a new batch change while another is already in progress.</value>
   </data>
@@ -137,6 +140,9 @@
   </data>
   <data name="CannotRegisterDynamicFieldWithSameNameForTwoDifferentObjectTypes" xml:space="preserve">
     <value>Cannot register dynamic field with the same name "{0}" against different object types. Consider using a field prefix when configuring the dynamic fields.</value>
+  </data>
+  <data name="DuplicateDynamicFieldReaderName" xml:space="preserve">
+    <value>Duplicate dynamic field reader name encountered: {0}. Dynamic field readers must have unique names.</value>
   </data>
   <data name="DuplicateFieldEncounteredOnObject" xml:space="preserve">
     <value>A duplicate field "{0}" was encountered while indexing item {1}. Most likely multiple dynamic field providers have been configured and the same field was produced by more than one of them. Consider using a field prefix when configuring the dynamic fields.</value>
@@ -222,6 +228,9 @@
   <data name="NoDeserializerAvailableForIndexVersion" xml:space="preserve">
     <value>No deserializer available for binary serialized version {0}.</value>
   </data>
+  <data name="NoDynamicFieldReaderNameInDynamicField" xml:space="preserve">
+    <value>Internal error: A dynamic field was missing its dynamic field reader name</value>
+  </data>
   <data name="NoItemReturnedWhenGeneratingMatchPhrases" xml:space="preserve">
     <value>No item was returned from the load item delegate when generating match phrases for item {0}.</value>
   </data>
@@ -276,8 +285,14 @@
   <data name="UnexpectedTokenEncountered" xml:space="preserve">
     <value>Unexpected token encountered: {0}</value>
   </data>
+  <data name="UnknownDynamicFieldReaderNameEncountered" xml:space="preserve">
+    <value>An unknown dynamic field reader name was encountered: {0} - this would likely indicate that an index was serialized with a differently configured set of dynamic field readers.</value>
+  </data>
   <data name="UnknownField" xml:space="preserve">
     <value>Unknown field '{0}'</value>
+  </data>
+  <data name="UnknownFieldKind" xml:space="preserve">
+    <value>Unknown FieldKind {0}</value>
   </data>
   <data name="UnknownOperatorEncountered" xml:space="preserve">
     <value>Unknown operator encountered: {0}</value>
