--- a/test/Lifti.Tests/TestResources.resx
+++ b/test/Lifti.Tests/TestResources.resx
@@ -127,4 +127,7 @@
   <data name="v4Index" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>V4.dat;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="v5Index" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>V5.dat;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
