Add fields to the v4 test serialized index

--- a/test/Lifti.Tests/TestResources.resx
+++ b/test/Lifti.Tests/TestResources.resx
@@ -125,6 +125,6 @@
     <value>v3.dat;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="v4Index" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>v4.dat;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>V4.dat;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
