Throw error on deserialization of earlier index if fields not found

--- a/src/Lifti.Core/ExceptionMessages.resx
+++ b/src/Lifti.Core/ExceptionMessages.resx
@@ -294,6 +294,9 @@
   <data name="UnknownFieldKind" xml:space="preserve">
     <value>Unknown FieldKind {0}</value>
   </data>
+  <data name="UnknownFieldsInSerializedIndex" xml:space="preserve">
+    <value>Serialized index contains unknown field ids. Fields have most likely been removed from the FullTextIndexBuilder configuration.</value>
+  </data>
   <data name="UnknownOperatorEncountered" xml:space="preserve">
     <value>Unknown operator encountered: {0}</value>
   </data>
