Work in progress
Still required:
* Index cache for item score boosts. Deriving maximum/minimum freshness/magnitude
* Application of item score boosts when calculating score results
* Tests

--- a/src/Lifti.Core/ExceptionMessages.resx
+++ b/src/Lifti.Core/ExceptionMessages.resx
@@ -324,4 +324,7 @@
   <data name="ValueMustNotBeLessThanZero" xml:space="preserve">
     <value>Value must not be less than zero</value>
   </data>
+  <data name="WithScoreBoostingCanOnlyBeCalledOncePerObjectDefinition" xml:space="preserve">
+    <value>WithScoreBoosting can only be called once per object builder</value>
+  </data>
 </root>
